# solana-rpc-testing

./: .gitignore  .gitmodules  Cargo.toml  README.md  bench-rpc-by-threads.sh  bombardier_tests.md  compare_results_and_plot_data.py  deploy_contracts.sh  package-lock.json  package.json  plot_data.py  run_bench.sh  tsconfig.json  ws.test.ts
configure/: anchor_utils.ts  common_utils.ts  configure_all.ts  deploy_programs.ts  main.ts  output_file.ts  programs.json  tsconfig.json
configure/general/: accounts.ts  create_payers.ts  create_users.ts  mint_utils.ts  solana_utils.ts
configure/openbook-v2/: configure_openbook.ts  create_markets.ts  openbook_v2.ts
configure/programs/: openbook_v2-keypair.json  openbook_v2.json  pyth_mock.json  spl_noop.json
src/: bencher.rs  cli.rs  config.rs  main.rs  metrics.rs  rpc_client.rs  test_registry.rs
src/openbook/: mod.rs  simulate_place_orders.rs
src/solana_runtime/: accounts_fetching.rs  get_block.rs  get_slot.rs  mod.rs  send_and_get_status_memo.rs
src/utils/: noop.rs
